fix(home): spacing

--- a/src/components/FindUs/FindUs.module.scss
+++ b/src/components/FindUs/FindUs.module.scss
@@ -8,7 +8,7 @@
     width: 100%;
     align-items: center;
     flex-direction: column;
-    padding: 72px 48px;
+    padding: 72px 32px;
     @include desktop{
         max-width: 1400px;
         padding:  72px;
