--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -52,7 +52,16 @@
     }
 }
 
-
+.balance{
+    position: absolute;
+    width: 500px;
+    height: 450px;
+    top: 25%;
+    left: 20%;
+    z-index: 1;
+    opacity: 0.05;
+;
+}
 
 .heroInfo{
     padding-top: 64px;
@@ -70,14 +79,20 @@
 }
 
 .maskShadow{
-    width: 350px;
-    height: 250px;
+    max-width: 350px;
+    max-height: 250px;
+    min-width: 250px;
+    min-height: 200px;
     background-color: #32466362 ;
     position: absolute;
     bottom: 0;
     border-radius: 50px 0 0 0;
-    transform: translate(-50px, 50px);
+    transform: translate(-25px, 25px);
+    @include desktop{
+        transform: translate(-50px, 50px);
+    }
     z-index: 1;
+
 }
 
 .title{
@@ -95,8 +110,15 @@
 
 .heroImage{
     border-radius: 0 30px 0 0;
-    height: 500px;
-    width: 400px;
-    z-index: 2;
+    width: 600px;
+    height: 400px;
+    @include desktop{
+        width: 100%;
+        min-width: 300px;
+        min-height: 350px;
+        max-height: 500px;
+        max-width: 400px;
+    }
 
+    z-index: 2;
 }
