--- a/src/components/ServicesSection/ServicesSection.module.scss
+++ b/src/components/ServicesSection/ServicesSection.module.scss
@@ -15,10 +15,11 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-
 }
 
 .wrapper{
+    padding: 72px 32px;
+
 
     @include desktop{
         max-width: 1400px;
