--- a/src/components/StepSection/StepSection.module.scss
+++ b/src/components/StepSection/StepSection.module.scss
@@ -7,7 +7,7 @@
     width: 100%;
     flex-direction: column;
     gap:94px;
-    padding: 72px 48px;
+    padding: 72px 32px;
     @include desktop{
         max-width: 1400px;
         padding:  72px; 
