--- a/src/components/ValueCard/ValueCard.module.scss
+++ b/src/components/ValueCard/ValueCard.module.scss
@@ -33,3 +33,6 @@
     line-height: 1.5;
 }
 
+.logo{
+    min-width: 32px;
+}
