--- a/src/components/ValueSection/ValueSection.module.scss
+++ b/src/components/ValueSection/ValueSection.module.scss
@@ -14,7 +14,7 @@
 .container{
     display: flex;
     width: 100%;
-    padding: 72px 48px;
+    padding: 72px 32px;
     flex-direction: column;
     @include desktop{
         flex-direction: row;
